systemd (35-1) UNRELEASED; urgency=low

  * New upstream release. Closes: #634618
    - Various man page fixes. Closes: #623521
  * Build for libnotify 0.7.
  * Bump Build-Depends on libudev to (>= 172).
  * Add Build-Depends on libacl1-dev. Required for building systemd-logind
    with ACL support.

 -- Tollef Fog Heen <tfheen@debian.org>  Wed, 14 Sep 2011 08:25:17 +0200

systemd (29-1) unstable; urgency=low

  [ Tollef Fog Heen ]
  * New upstream version, Closes: #630510
    - Includes typo fixes in documentation.  Closes: #623520
  * Fall back to the init script reload function if a native .service file
    doesn't know how to reload.  Closes: #628186
  * Add hard dependency on udev.  Closes: #627921

  [ Michael Biebl ]
  * hwclock-load.service is no longer installed, so we don't need to remove it
    anymore in debian/rules.
  * Install /usr/lib directory for binfmt.d, modules-load.d, tmpfiles.d and
    sysctl.d.
  * Remove obsolete conffiles from /etc/tmpfiles.d on upgrades. Those files
    are installed in /usr/lib/tmpfiles.d now.
  * Depend on util-linux (>= 2.19.1-2) which provides whole-disk locking
    support in fsck and remove our revert patch.
  * Don't choke when systemd was compiled with a different CAP_LAST_CAP then
    what it is run with. Patch cherry-picked from upstream Git.
    Closes: #628081
  * Enable dev-hugepages.automount and dev-mqueue.automount only when enabled
    in kernel. Patch cherry-picked from upstream Git.  Closes: #624522

 -- Tollef Fog Heen <tfheen@debian.org>  Wed, 08 Jun 2011 16:14:31 +0200

systemd (25-2) experimental; urgency=low

  * Handle downgrades more gracefully by removing diversion of
    /lib/lsb/init-functions on downgrades to << 25-1.
  * Cherry-pick a133bf10d09f788079b82f63faa7058a27ba310b from upstream,
    avoids assert when dumping properties.  Closes: #624094
  * Remove "local" in non-function context in init-functions wrapper.

 -- Tollef Fog Heen <tfheen@debian.org>  Wed, 27 Apr 2011 22:20:04 +0200
