@@ -1,0 +1,21 @@
+libsystemd-login.so.0 libsystemd-login0 #MINVER#
+ LIBSYSTEMD_LOGIN_31@LIBSYSTEMD_LOGIN_31 31
+ sd_get_seats@LIBSYSTEMD_LOGIN_31 31
+ sd_get_sessions@LIBSYSTEMD_LOGIN_31 31
+ sd_get_uids@LIBSYSTEMD_LOGIN_31 31
+ sd_login_monitor_flush@LIBSYSTEMD_LOGIN_31 31
+ sd_login_monitor_get_fd@LIBSYSTEMD_LOGIN_31 31
+ sd_login_monitor_new@LIBSYSTEMD_LOGIN_31 31
+ sd_login_monitor_unref@LIBSYSTEMD_LOGIN_31 31
+ sd_pid_get_owner_uid@LIBSYSTEMD_LOGIN_31 31
+ sd_pid_get_session@LIBSYSTEMD_LOGIN_31 31
+ sd_seat_can_multi_session@LIBSYSTEMD_LOGIN_31 31
+ sd_seat_get_active@LIBSYSTEMD_LOGIN_31 31
+ sd_seat_get_sessions@LIBSYSTEMD_LOGIN_31 31
+ sd_session_get_seat@LIBSYSTEMD_LOGIN_31 31
+ sd_session_get_uid@LIBSYSTEMD_LOGIN_31 31
+ sd_session_is_active@LIBSYSTEMD_LOGIN_31 31
+ sd_uid_get_seats@LIBSYSTEMD_LOGIN_31 31
+ sd_uid_get_sessions@LIBSYSTEMD_LOGIN_31 31
+ sd_uid_get_state@LIBSYSTEMD_LOGIN_31 31
+ sd_uid_is_on_seat@LIBSYSTEMD_LOGIN_31 31
