@@ -4,7 +4,9 @@
 #export DEB_BUILD_OPTIONS="nostrip"
 
 override_dh_auto_configure:
-	dh_auto_configure -- --with-rootdir= \
+	dh_auto_configure -- \
+		--with-rootdir= \
+		--with-rootlibdir=/lib \
 		--with-udevrulesdir=/lib/udev/rules.d \
 		--enable-gtk \
 		--enable-libcryptsetup \
@@ -21,10 +23,11 @@ override_dh_auto_clean:
 override_dh_install:
 	rm debian/tmp/usr/share/doc/systemd/LICENSE
 	rm debian/tmp/lib/security/pam_systemd.la
+	rm debian/tmp/usr/lib/*.la
 	rm debian/tmp/lib/systemd/system/sysinit.target.wants/systemd-vconsole-setup.service
 	dh_install -O--parallel --fail-missing
 	dh_install -plibpam-systemd debian/pam-configs /usr/share
 	dh_install debian/ifup@.service /lib/systemd/system
 
 %:
-	dh $@ --parallel --with autoreconf
+	dh $@ --parallel
